# VQE_Portfolio_Optimization

./: .gitattributes  .gitignore  README.md  RESULTS.md  Real_Stock_Data.py  THEORY.md  USAGE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
docs/: THEORY.md  USAGE.md  conf.py  index.md  results.md
docs/_static/: portfolio.css
docs/user/: theory.md  usage.md
notebooks/: Ansatz_Comparison.ipynb  Benchmark_Comparison.ipynb  Binary.ipynb  Binary_VQE.ipynb  Binary_VQE.py  Classical_Markowitz.ipynb  Fractional.ipynb  Fractional_VQE.ipynb  Fractional_VQE.py  Markowitz_Portfolio.ipynb  Markowitz_Portfolio.py  Portfolio_Optimizer.ipynb  QAOA.ipynb  Real_Data_Comparison.ipynb  VQE_Portfolio_BinaryEncoding.ipynb  VQE_Portfolio_Fractional.ipynb
notebooks/Examples/: Real_Example.ipynb
notebooks/examples/: 01_Real_example.ipynb  02_Real_Example.ipynb  03_Real_Example.ipynb  04_Larger_Real_Data_Example.ipynb  Real_Example.ipynb
results/: ansatz_comparison.csv  generated_comparison_summary.csv  generated_repeatability_trials.csv  larger_real_data_comparison.csv  real_data_comparison.csv  real_data_method_comparison.csv  synthetic_comparison.csv
scripts/: generate_ansatz_comparison.py  generate_comparison_results.py  generate_larger_real_data_example.py
src/vqe_portfolio/: __init__.py  ansatz.py  binary.py  cli.py  comparison.py  data.py  fractional.py  frontier.py  optimize.py  plotting.py  qaoa.py  types.py  utils.py
tests/: conftest.py  test_ansatz_options.py  test_binary_vqe.py  test_cli.py  test_comparison.py  test_frontier.py  test_generate_ansatz_comparison.py  test_generate_comparison_results.py  test_imports.py  test_markowitz_extra.py  test_qaoa.py  test_qaoa_cli.py
