[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vqe-portfolio"
version = "0.0.1"
description = "VQE-based portfolio optimization with PennyLane"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Sid Richards" }]
dependencies = [
  "numpy",
  "pandas",
  "yfinance",
  "pennylane",
  "matplotlib",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
